...
  var friendUidToDelete by remember { mutableStateOf("") }

  Scaffold(
      modifier = Modifier.testTag("ProfileScreen"),
      topBar = {
        TopAppBar(
            title = { Text("Profile", Modifier.testTag("ProfileBar")) },
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.navigateTo(Screen.PROFILE) },
                  modifier = Modifier.testTag("goBackButton")) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Outlined.ArrowBack,
                        contentDescription = "Back")
                  }
            },
        )
...
                .verticalScroll(rememberScrollState())) {
          OutlinedTextField(
              value = email,
              onValueChange = {},
              enabled = false,
              label = { Text("Email") },
              modifier = Modifier.fillMaxWidth().testTag("emailField"))

          OutlinedTextField(
              value = username,
              onValueChange = { username = it },
              enabled = true,
              label = { Text("Username") },
...
                          modifier =
                              Modifier.size(24.dp)
                                  .testTag("addingFriendIcon") // Adjust size as needed
                          )
                      Spacer(modifier = Modifier.width(8.dp)) // Space between icon and text
                      Text(
                          text = "Add Friend",
                          style = MaterialTheme.typography.bodyLarge // Or customize further
                          )
                    }
              }

          Button(
...

                    OutlinedTextField(
                        value = friendMail,
                        onValueChange = { friendMail = it },
                        label = { Text("Friend Email") },
                        placeholder = { Text("example@example.com") },
                        modifier = Modifier.testTag("addingFriendField"))

                    Button(
                        onClick = {
                          if (friendMail == profile.value.email) {
                            Log.d("Friend added", "It is you")
                            Toast.makeText(context, "You cannot add yourself", Toast.LENGTH_LONG)
...
                                },
                                onFailure = { e ->
                                  Toast.makeText(context, e.message!!, Toast.LENGTH_LONG).show()
                                })
                          }
                        },
                        modifier = Modifier.testTag("addingFriendButton")) {
                          Text("Add Friend")
                        }
                  }
            }
      }
    }
...
