...

          Spacer(Modifier.padding(10.dp))

          OutlinedTextField(
              value = password,
              onValueChange = { password = it },
              modifier = Modifier.testTag("passwordField"),
              label = { Text("Password") },
              placeholder = { Text("password") },
              visualTransformation = PasswordVisualTransformation())

          Spacer(Modifier.padding(10.dp))

...
                              "Signup in failed.",
                              Toast.LENGTH_SHORT,
                          )
                          .show()
                    })
              }) {
                Text("Sign up")
              }

          Spacer(Modifier.padding(5.dp))

          Button(
              enabled =
...
                              Toast.LENGTH_SHORT,
                          )
                          .show()
                      methodChosen.value = false
                    })
              }) {
                Text("Log in")
              }
        }
      }
}

